# Spatial-Iteration-Engine

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FREEZE.md  GITFLOW.md  Makefile  NEXT_STEPS.md  README.md  SECURITY_AUDIT.md  environment.yml  inventory.txt  m.html  requirements-build.txt  run_basic_stream.sh  run_dashboard.py  run_dashboard_mobile.py  run_dashboard_mobile_v3.py  run_native.py  run_preview.sh  run_preview_pattern.sh  run_preview_raw.sh
ascii_stream/: README.md  __init__.py  base.py  (+11 more)
cpp/: CMakeLists.txt  README.md  build.sh
cpp/include/filters/: filter.hpp  filters_api.hpp  temporal_scan.hpp
cpp/include/perception/: onnx_runner.hpp  perception_api.hpp  perception_common.hpp
cpp/src/bridge/: pybind_bridge.cpp  pybind_filters.cpp  pybind_perception.cpp
cpp/src/filters/: blur.cpp  brightness_contrast.cpp  channel_swap.cpp  edge.cpp  grayscale.cpp  invert.cpp  posterize.cpp  sharpen.cpp  temporal_scan.cpp  threshold.cpp
cpp/src/perception/: README.md  face_landmarks.cpp  hand_landmarks.cpp  onnx_runner.cpp  pose_landmarks.cpp
cpp/src/render/: deformed_render.cpp
python/: pyproject.toml  requirements.txt
python/ascii_stream_engine/: __init__.py  requirements.txt
python/ascii_stream_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/ascii_stream_engine/adapters/analyzers/: __init__.py
python/ascii_stream_engine/adapters/calibration/: __init__.py  calibration_storage.py  camera_calibrator.py  multi_camera_sync.py  perspective_corrector.py
python/ascii_stream_engine/adapters/controllers/: __init__.py  base.py  control_mapping.py  controller_manager.py  midi_controller.py  osc_controller.py
python/ascii_stream_engine/adapters/filters/: __init__.py
python/ascii_stream_engine/adapters/generators/: __init__.py  base.py  generator_source.py  pattern_generator.py
python/ascii_stream_engine/adapters/outputs/: __init__.py  _subprocess_utils.py  ascii_recorder.py  composite.py  notebook_preview_sink.py  preview_sink.py  udp.py
python/ascii_stream_engine/adapters/perception/: __init__.py  emotion.py  face.py  hand_gesture.py  hands.py  object_detection.py  pose.py  pose_skeleton.py  segmentation.py
python/ascii_stream_engine/adapters/processors/: __init__.py
python/ascii_stream_engine/adapters/renderers/: __init__.py  ascii.py  cpp_renderer.py  landmarks_overlay_renderer.py  passthrough_renderer.py  projection_calibration.py  projection_mapping_renderer.py
python/ascii_stream_engine/adapters/sensors/: __init__.py  audio_sensor.py  base.py  depth_sensor.py  sensor_fusion.py
python/ascii_stream_engine/adapters/sources/: __init__.py  camera.py  video_file.py
python/ascii_stream_engine/adapters/spatial/: __init__.py  compound_source.py  face_source.py  hand_frame_source.py  hands_source.py  manual_source.py  object_source.py  pose_source.py
python/ascii_stream_engine/adapters/trackers/: __init__.py  base.py  kalman_tracker.py  multi_object_tracker.py  opencv_tracker.py  tracking_pipeline.py
python/ascii_stream_engine/adapters/transformations/: __init__.py  base.py  blend_transformer.py  projection_mapper.py  transformation_pipeline.py  warp_transformer.py
python/ascii_stream_engine/application/: __init__.py  engine.py  parallel_pipeline.py
python/ascii_stream_engine/domain/: __init__.py  analysis_result.py  config.py  config_loader.py  events.py  frame_analysis.py  frame_metadata.py  tracking_data.py  types.py
python/ascii_stream_engine/examples/: basic_stream.py  basic_stream_cpp_filters.py  config_example.json  config_example.py  config_example.yaml  diagnose_camera.py  full_control_panel.ipynb  full_pipeline_showcase.ipynb  hardtest.py  notebook_engine_preview.ipynb  notebook_full_control.ipynb  perception_test_bench.ipynb  profiling_example.py  spatial_engine_preview.ipynb  stream_camera_cpp_preview.py  stream_camera_preview_only.py  stream_preview_file.py  stream_preview_pattern.py  stream_with_landmarks.py  stream_with_preview.py  system_analysis_and_testing.ipynb  test_ascii_graph.py  test_camera_only.py  test_hand_ascii.py  widgets_demo.py
python/ascii_stream_engine/infrastructure/: __init__.py  config_persistence.py  event_bus.py  event_filter.py  logging.py  message_queue.py  metrics.py  profiling.py
python/ascii_stream_engine/ports/: __init__.py  controllers.py  generators.py  output_capabilities.py  outputs.py  overlay_capable.py  processors.py  renderers.py  sensors.py  sources.py  spatial.py  trackers.py  transformations.py
python/ascii_stream_engine/presentation/: __init__.py  gradio_app.py  gradio_helpers.py  notebook_api.py
python/ascii_stream_engine/tests/: __init__.py  bench_perception.py  profile_new_filters.py  test_analyzers.py  test_budget_tracker.py  test_composite_node.py  test_config_persistence.py  test_config_types.py  test_cpp_temporal_scan.py  test_crt_glitch.py  test_dashboard_server.py  test_distributed_metrics.py  test_engine.py  test_error_handling.py  test_event_bus_enhanced.py  test_fan_out.py  test_filter_context.py  test_filter_registry.py  test_filters.py  test_geometric_patterns.py  test_gradio_dashboard.py  test_graph_adapter_nodes.py  test_graph_branching.py  test_graph_builder.py  test_graph_core.py  test_graph_integration.py  test_graph_mutation_sync.py  test_graph_nodes.py  test_graph_scheduler.py  test_metrics_aggregator.py  test_modulation_curves.py  test_modulation_engine.py  test_modulation_mediapipe_source.py  test_modulation_protocol.py  test_modulation_signal_bus.py  test_mosaic_node.py  test_mp3_presets.py  test_mp3_tier1_filters.py  test_mp3_tier2_filters.py  test_mp3_tier3_filters.py  (+34 more)
python/examples/: full_control_panel.ipynb
python/perception/: __init__.py  person_detection.py  pose_estimation.py  silhouette_segmentation.py
python/style/: __init__.py  style_encoder.py  stylizer.py  temporal_coherence.py
(+544 files in other folders)
