[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-stream-engine"
version = "0.1.0"
description = "Stream engine for Spatial-Iteration-Engine (ASCII, filters, perception)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24,<3",
    "opencv-python>=4.5",
    "Pillow>=9.0",
    "PyYAML>=6.0",
    "ipywidgets>=8.0",
    "ipython>=8.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ascii_stream_engine*"]
